...
        .swipeActions(edge: .trailing, allowsFullSwipe: true) {
                // Swipe-to-delete
                Button {
                    taskToDelete = task // Store the task to delete
                    showUndoAlert = true // Show the undo alert
                } label: {
                    Label("Delete", systemImage: "trash")
                }.accessibilityIdentifier("Delete")

                // Swipe-to-complete
                Button {
                    toggleTaskCompletion(task)
                } label: {
                    Label(task.isCompleted ? "Undo" : "Complete", systemImage: task.isCompleted ? "arrow.uturn.backward" : "checkmark")
                }.accessibilityLabel("Complete")
                .tint(task.isCompleted ? .orange : .green)
            }
            .alert("Task Deleted", isPresented: $showUndoAlert) {
                Button("Undo", role: .cancel) {
                    if let taskToDelete = taskToDelete {
...
